<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.decision.DecisionFragment">


    <Button
        android:id="@+id/btn_login_fragment"
        android:layout_width="123dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="144dp"
        android:text="@string/login"
        app:layout_constraintEnd_toStartOf="@+id/btn_signup_fragment"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <Button
        android:id="@+id/btn_signup_fragment"
        android:layout_width="123dp"
        android:layout_height="60dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="40dp"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="367dp"
        android:layout_height="108dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="16dp"
        android:text="@string/selamat_datang_di_aplikasi_storyapp"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>